# Favy

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  license.txt  notes.md  package-lock.json  package.json  readme.md  svelte.config.js
.github/workflows/: publish.yml
data structures.mindnode/: contents.xml  viewState.plist
data structures.mindnode/style.mindnodestyle/: contents.xml  metadata.plist
playground/: main.js
src/: global_style.scss
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  main.rs  make_thumb.rs  resize_simd.rs
src/lib/: ButtonToggle.svelte  Center.svelte  Export.svelte  FilterMenu.svelte  Heart.svelte  ImageViewer.svelte  Modal.svelte  NewReel.svelte  Reel.svelte  Star.svelte  Status.svelte  Toolbar.svelte  Xcross.svelte  dispatch.ts  stores.ts
src/lib/icons/: And.svelte  ArrowLeft.svelte  BoxArrowUp.svelte  Center.svelte  Cog.svelte  Crosshair.svelte  Dot.svelte  Filter.svelte  Folder.svelte  Heart.svelte  Paper.svelte  Papers.svelte  Photo.svelte  Stars1.svelte  Stars2.svelte  Stars3.svelte  Trash.svelte
src/routes/: +layout.svelte  +page.svelte  ImageViewer.svelte  Reel.svelte  Settings.svelte  Toolbar.svelte
src/routes/make-thumb/: +server.ts
src/routes/settings/: +page.svelte
static/: notes.md
